[package]
name = "path-image"
version = "0.1.1"
edition = "2021"
description = "A Rust library for working with image paths"
authors = ["Ersox"]
license = "MIT"
repository = "https://github.com/ersox/path-image"
homepage = "https://github.com/ersox/path-image"
documentation = "https://docs.rs/path-image"

[dependencies]
image = "0.25.9"
ab_glyph = "0.2.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
